<resources>
    <string name="app_name">ExpressStore</string>
    <string name="settings">Settings</string>
    <string name="infoHeader">Info</string>
    <string name="editProfile">Edit Profile</string>
    <string name="help">Help</string>
    <string name="faq">FAQ</string>
    <string name="helpOption">Questions? Need Help?</string>
    <string name="info">App info</string>
    <string name="made">Made with &#128155; in Canada</string>
    <string name="payment_id">Payment ID</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="payment_status">Payment Status</string>
    <string name="checkout">Checkout</string>
    <string name="pay">Pay</string>
    <string name="we_are_trying_to_connect">We are trying to connect&#8230;</string>
    <string name="contact_us">Contact us</string>
    <string name="terms_and_privacy_policy">Terms and Privacy Policy</string>
    <string name="sahil_fruitwala">Sahil Fruitwala</string>
    <string name="abcpqr_abc_com">abcpqr@abc.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="proceed">Proceed to <b>pay</b></string>
    <string name="startShop">Start Shopping</string>
    <string name="prevOrders">Previous Orders</string>
    <string name="noOrders"> \t\t\t\tNo Orders \nStart Shopping Now</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="we_appreciate_your_feedback">We Appreciate Your Feedback</string>
    <string name="number">Mobile No</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password">Old Password</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="enter_your_email_address">Enter Your Email Address</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="get_password">Get Password</string>


</resources>
