<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/profileSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:onClick="openOtherSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_user_circle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/nameData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/colorBlack"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/emailData"
                android:onClick="copyEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSection"
        app:layout_constraintVertical_bias="0.03">

        <LinearLayout
            android:id="@+id/editSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openOtherSettings"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_edit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:layout_marginHorizontal="15dp"
                android:paddingTop="2.5dp"
                android:text="@string/edit_profile"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/faqSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openOtherSettings"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_help_outline_36dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:layout_marginHorizontal="15dp"
                android:paddingTop="2.5dp"
                android:text="@string/faq"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contactSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="openOtherSettings"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_contact_us" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:layout_marginHorizontal="15dp"
                android:text="@string/contact_us"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/policySection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="openOtherSettings"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_policy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:layout_marginHorizontal="15dp"
                android:paddingTop="2.5dp"
                android:text="@string/terms_and_privacy_policy"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/infoSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="openOtherSettings"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_info_outline_36dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:layout_marginHorizontal="15dp"
                android:paddingTop="2.5dp"
                android:text="@string/info"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/logoutSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="openOtherSettings"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_logout" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:layout_marginHorizontal="15dp"
                android:paddingTop="2.5dp"
                android:text="@string/logout"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:text="@string/made"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSection"
        app:layout_constraintVertical_bias="0.932" />

</androidx.constraintlayout.widget.ConstraintLayout>